# youtube-dl-helper

./: .project  Jenkinsfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini  youtube-dl-helper.desktop  youtube-dl-helper.spec
src/youtubedlhelper/: __init__.py  youtube-dl-helper.glade
youtube-dl-helper/: youtube-dl-helper.glade
